# mets-retriever

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: test.yml
mets_retriever/: __init__.py  cli.py  mets_retriever.py
requirements/: base.txt  test.txt
tests/: conftest.py  test_mets_retriever.py
