[metadata]
name = mets-retriever
version = 0.2.1
author = Artefactual Systems, Inc.
author_email = info@artefactual.com
description = Python library and CLI tool to download Archivematica METS files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artefactual-labs/mets-retriever
project_urls =
    Bug Tracker = https://github.com/artefactual-labs/mets-retriever/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Click>=8.0.4
    amclient>=1.2.2
    SQLAlchemy>=1.4.35

[options.entry_points]
console_scripts =
    retrieve-mets = mets_retriever.cli:retriever

[options.packages.find]
exclude =
    tests*
